@@ -39,6 +39,7 @@ bind "g"			"phys_swap"
 bind "y" 			"messagemode"
 bind "u" 			"messagemode2"
 bind "k" 			"+voicerecord"
+bind "v" 			"dospectate"
 
 //set Pantone Shift as default pony.
 cl_ponedm_violencelevel "0"
