@@ -55,6 +55,7 @@
 "quit"					"#Valve_Quit_Game"
 "timeleft"				"Time Left in Round"
 "askconnect_accept"	"#Valve_Accept_Redirect"
+"dospectate"			"#PoneDM_EnterSpectate"
 "blank"			"=========================="
 "blank"			"#Valve_Miscellaneous_Keyboard_Keys_Title"
 "blank"			"=========================="
